# cube-desk

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  app.py  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_12_1454-init.py  2026_04_12_1600_auth_tokens.py  2026_04_12_1800_tickets.py  2026_05_01_1700_user_roles.py  2026_05_01_2205-ticket_message_attachments.py  2026_05_02_1200_ticket_assignee.py  2026_05_14_1200_ticket_priority.py  2026_05_14_1400_ticket_categories.py  2026_05_14_1600_ticket_resolution.py
backend/project/: main.py
backend/project/core/: config.py  exceptions.py
backend/project/core/database/: __init__.py  engine.py
backend/project/dependencies/: auth.py
backend/project/models/: __init__.py  auth_tokens.py  tickets.py  users.py
backend/project/repositories/: __init__.py  auth_tokens.py  ticket_categories.py  tickets.py  users.py
backend/project/routers/http/: __init__.py  exceptions.py
backend/project/routers/http/admin/: router.py  schemas.py
backend/project/routers/http/auth/: router.py  schemas.py
backend/project/routers/http/health/: router.py
backend/project/routers/http/ticket_categories/: router.py  schemas.py
backend/project/routers/http/tickets/: router.py  schemas.py
backend/project/routers/http/users/: router.py  schemas.py
backend/project/schemas/: __init__.py  similar_solutions.py
backend/project/services/: admin.py  auth.py  dev_seed.py  passwords.py  tickets.py  users.py
backend/project/services/ai/: embedding.py  qdrant_store.py  ticket_similarity.py
backend/project/services/s3/: schemes.py  service.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: admin-route.tsx  app-layout.tsx  app.tsx  protected-route.tsx  providers.tsx  router.tsx
frontend/src/pages/: forbidden-page.tsx  login-page.tsx  not-found-page.tsx  register-page.tsx  ticket-page.tsx  tickets-page.tsx
frontend/src/pages/admin/: admin-dashboard-page.tsx  admin-shell.tsx  admin-ticket-categories-page.tsx  (+1 more)
(+50 files in other folders)
